--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -9,4 +9,4 @@ j2ee.server.middleware=C:/Users/PC/Documents/librerias/glassfish5
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\Jhon Mauricio Moreno\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+user.properties.file=C:\\Users\\PC\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
